--- a/src/configs/model/LINKER.yaml
+++ b/src/configs/model/LINKER.yaml
@@ -6,15 +6,15 @@ lambda_coeff: 0.9
 reg_weight: 1e-4
 
 n_layers: 1
-n_ui_layers: [3, 4, 5]
+n_ui_layers: 5
 knn_k: 10
 learning_rate: [1e-03]
 cl_weights: [1e-02]
 
 user_k: [30]
 item_k: [20]
-modality_ratio: [0.1, 0.3, 0.5, 0.7, 0.9]
-threshold: [0.6, 0.7, 0.8, 0.9]
+modality_ratio: [0.1]
+threshold: [0.8, 0.9]
 generate_ratio: [0.2, 0.4, 0.6, 0.8, 1.0]
 hyper_parameters: ["n_ui_layers", "user_k", "item_k", "modality_ratio", "threshold", "generate_ratio"]
 
